2010-04-12  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TimeSpan.cs: Implement support for custom formats parsing. This
	should as well include the bits required to easily implement the same
	for ToString methods, when the final release fixes the mess we found
	in the latest beta.

2010-04-08 Rodrigo Kumpera  <rkumpera@novell.com>

	* Type.cs: Add ResolveInternal virtual call that
	resolves a given type to it's concrete type.

2010-03-07 Rodrigo Kumpera  <rkumpera@novell.com>

	* Enum.cs (GetInfo): Don't use isinst tests as they can
	return true for both signed and unsigned version of a
	primitive type.

	* Enum.cs (FindPosition): Ditto.

2010-04-06  Marek Safar  <marek.safar@gmail.com>

	* Array.cs: Don't make read-only collection read-only.

2010-03-31  Miguel de Icaza  <miguel@novell.com>

	* UInt32.cs, Int64.cs, UInt64.cs: cope with the case that the
	IFormatProvider is not a NumberFormatInfo, preventing a crash.
	This was already handled by Int32.cs, but these other routines
	were never properly updated. 

	Fixes #588356

	* DateTimeOffset.cs: Add support for format K in DateTimeOffset,
	fixes bug 589227.

	* DateTime.cs: Add serialization support, fixes #588198.

	Perhaps we should change the format as well since this is the new
	format serialized anyways (see bug 592221, it saves 4 bytes of
	memory as well)

2010-03-30  Sebastien Pouliot  <sebastien@ximian.com>

	* InvalidTimeZoneException.cs
	* TimeZoneNotFoundException.cs:
		Fix Moonlight since these types now reside in mscorlib
		(instead of System.Core) for NET_4_0 and also for SL4

2010-03-30  Jb Evain  <jbevain@novell.com>

	* MonoType.cs: let the binder reorder arguments when invoking
	params methods.
	* Activator.cs (CreateInstance): use BindToMethod instead of
	SelectMethod to make sure that params constructors are properly called.

	Fixes #591877

2010-03-29  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* TimeSpan.cs: Implement all the overloads of both TryParseExact and