@@ -1,3 +1,7 @@
+2010-04-13  Zoltan Varga  <vargaz@gmail.com>
+
+	* Convert.cs (ToInt32): Do a checked cast. Fixes #596339.
+
 2010-04-12  Carlos Alberto Cortez <calberto.cortez@gmail.com>
 
 	* TimeSpan.cs: Implement support for custom formats parsing. This
